# pointCloud

./: BinaryPointsLoader.cpp  BinaryPointsLoader.h  BinaryPointsReader.cpp  BinaryPointsReader.h  CMakeLists.txt  README.md  TextPointsLoader.cpp  TextPointsLoader.h  pack.cmake  pointCloud.cpp  txt2bin.py
examples/: pointCloudIntersector.py  pointCloudSampleGenerator.py  pointCloudView.py
shaders/: Sphere.frag  Sphere.geom  Sphere.vert
